fixing test